storageOverhead->filesystemOverhead describe filesystemOverhead. switch to an overhead of 0.055 and reverse notion of filesystem overhead (allow (1-overhead)*size).
