# api/openapi-spec/swagger.json
@@ -3167,13 +3167,13 @@
        "type": "string"
       }
      },
+     "filesystemOverhead": {
+      "type": "string"
+     },
      "podResourceRequirements": {
       "$ref": "#/definitions/v1.ResourceRequirements"
      },
      "scratchSpaceStorageClass": {
-      "type": "string"
-     },
-     "storageOverhead": {
       "type": "string"
      },
      "uploadProxyURLOverride": {
@@ -3189,10 +3189,10 @@
      "defaultPodResourceRequirements": {
       "$ref": "#/definitions/v1.ResourceRequirements"
      },
-     "scratchSpaceStorageClass": {
+     "filesystemOverhead": {
       "type": "string"
      },
-     "storageOverhead": {
+     "scratchSpaceStorageClass": {
       "type": "string"
      },
      "uploadProxyURL": {
