# pkg/controller/config-controller.go
@@ -76,7 +76,7 @@ func (r *CDIConfigReconciler) Reconcile(req reconcile.Request) (reconcile.Result
 		return reconcile.Result{}, err
 	}
 
-	if err := r.reconcileStorageOverhead(config); err != nil {
+	if err := r.reconcileFilesystemOverhead(config); err != nil {
 		return reconcile.Result{}, err
 	}
 
@@ -215,18 +215,18 @@ func (r *CDIConfigReconciler) reconcileDefaultPodResourceRequirements(config *cd
 	return nil
 }
 
-func (r *CDIConfigReconciler) reconcileStorageOverhead(config *cdiv1.CDIConfig) error {
-	log := r.log.WithName("CDIconfig").WithName("StorageOverhead")
+func (r *CDIConfigReconciler) reconcileFilesystemOverhead(config *cdiv1.CDIConfig) error {
+	log := r.log.WithName("CDIconfig").WithName("FilesystemOverhead")
 
 	// Check config for storage overhead
-	if config.Spec.StorageOverhead != nil {
-		log.Info("Setting storage overhead to override", "StorageOverhead", config.Spec.StorageOverhead)
-		config.Status.StorageOverhead = *config.Spec.StorageOverhead
+	if config.Spec.FilesystemOverhead != nil {
+		log.Info("Setting filesystem overhead to override", "FilesystemOverhead", config.Spec.FilesystemOverhead)
+		config.Status.FilesystemOverhead = *config.Spec.FilesystemOverhead
 		return nil
 	}
 
-	log.Info("No storage overhead found, setting storage overhead to hard-coded default")
-	config.Status.StorageOverhead = "0.8"
+	log.Info("No filesystem overhead found, setting filesystem overhead to hard-coded default")
+	config.Status.FilesystemOverhead = "0.055"
 	return nil
 }
 
